src/objects/State_Province_Emirate__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>Country__r.Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>State_Province_Emerates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>State/Province/Emirate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Country_Code__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Zealand</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Country_Code__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>NZ</value>
        </filters>
        <label>New Zealand</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>State/Province/Emirate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State/Province/Emirates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>